--- a/docs/references.bib
+++ b/docs/references.bib
@@ -3,7 +3,6 @@ author = {Zerina Mašetic and Abdulhamit Subasi and Jasmin Azemovic},
 title = {Malicious Web Sites Detection using C4.5 Decision Tree},
 journal = {Southeast Europe Journal of Soft Computing},
 year = {2016},
-DOI = {http://dx.doi.org/10.21533/sejsc.v5i1.109}
 }
 
 @article{gapi,
@@ -23,8 +22,6 @@ url = {https://developers.google.com/safe-browsing}
  location = {Barcelona, Catalonia, Spain},
  pages = {2238--2243},
  numpages = {6},
- url = {http://dx.doi.org/10.5591/978-1-57735-516-8/IJCAI11-373},
- doi = {10.5591/978-1-57735-516-8/IJCAI11-373},
  acmid = {2283771},
  publisher = {AAAI Press}
 }
@@ -45,8 +42,6 @@ pages = "1166 - 1177",
 year = "2015",
 note = "",
 issn = "0957-4174",
-doi = "https://doi.org/10.1016/j.eswa.2014.08.046",
-url = "http://www.sciencedirect.com/science/article/pii/S0957417414005284",
 author = "H.B. Kazemian and S. Ahmed",
 keywords = "K-Nearest Neighbor",
 keywords = "Support Vector Machine",
@@ -66,8 +61,6 @@ keywords = "Supervised and unsupervised learning "
  location = {Perth, Australia},
  pages = {677--684},
  numpages = {8},
- url = {https://doi.org/10.1145/3038912.3052686},
- doi = {10.1145/3038912.3052686},
  acmid = {3052686},
  publisher = {International World Wide Web Conferences Steering Committee},
  address = {Republic and Canton of Geneva, Switzerland},
@@ -79,13 +72,11 @@ keywords = "Supervised and unsupervised learning "
           number = {1999-66},
            month = {November},
           author = {Lawrence Page and Sergey Brin and Rajeev Motwani and Terry Winograd},
-            note = {Previous number = SIDL-WP-1999-0120},
            title = {The PageRank Citation Ranking: Bringing Order to the Web.},
             type = {Technical Report},
        publisher = {Stanford InfoLab},
             year = {1999},
      institution = {Stanford InfoLab},
-             url = {http://ilpubs.stanford.edu:8090/422/},
         abstract = {The importance of a Web page is an inherently subjective matter, which depends on the readers interests, knowledge and attitudes. But there is still much that can be said objectively about the relative importance of Web pages. This paper describes PageRank, a mathod for rating Web pages objectively and mechanically, effectively measuring the human interest and attention devoted to them. We compare PageRank to an idealized random Web surfer. We show how to efficiently compute PageRank for large numbers of pages. And, we show how to apply PageRank to search and to user navigation.}
 }
 
@@ -96,7 +87,6 @@ title={EvilSeed: A Guided Approach to Finding Malicious Web Pages},
 year={2012},
 pages={428-442},
 keywords={Internet;search engines;security of data;EvilSeed;Internet;URL;crawler-based approaches;drive-by download attacks;fast prefiltering techniques;malicious Web pages;malicious code;search engines queries;social engineering techniques;unwanted software;Crawlers;Feature extraction;Google;Malware;Search engines;Web pages;Drive-By Downloads;Guided Crawl-Web Security;Guided Crawling;Web Security},
-doi={10.1109/SP.2012.33},
 ISSN={1081-6011},
 month={May},}
 
@@ -107,7 +97,6 @@ booktitle = {},
 year = {2010},
 month = {April},
 publisher = {USENIX},
-url = {https://www.microsoft.com/en-us/research/publication/webcop-locating-neighborhoods-of-malware-on-the-web/},
 address = {},
 pages = {},
 journal = {},
@@ -120,7 +109,6 @@ isbn = {},
   added-at = {2011-05-12T20:53:49.000+0200},
   address = {San Mateo, CA},
   author = {Quinlan, Ross},
-  biburl = {https://www.bibsonomy.org/bibtex/257301013e0d9dfdc6fea0a0b7f534a1f/smolav},
   interhash = {04b1b53fd5576519f193097987ab221d},
   intrahash = {57301013e0d9dfdc6fea0a0b7f534a1f},
   keywords = {c45 decision-trees machine-learning projn2011},
@@ -137,7 +125,6 @@ booktitle = {IEEE Symposium on Security and Privacy, 2013},
 year = {2013},
 month = {May},
 publisher = {IEEE},
-url = {https://www.microsoft.com/en-us/research/publication/finding-the-linchpins-of-the-dark-web-a-study-on-topologically-dedicated-hosts-on-malicious-web-infrastructures/},
 address = {},
 pages = {},
 journal = {},
@@ -179,9 +166,7 @@ volume="14",
 number="1",
 pages="1--37",
 abstract="This paper presents the top 10 data mining algorithms identified by the IEEE International Conference on Data Mining (ICDM) in December 2006: C4.5, k-Means, SVM, Apriori, EM, PageRank, AdaBoost, kNN, Naive Bayes, and CART. These top 10 algorithms are among the most influential data mining algorithms in the research community. With each algorithm, we provide a description of the algorithm, discuss the impact of the algorithm, and review current and further research on the algorithm. These 10 algorithms cover classification, clustering, statistical learning, association analysis, and link mining, which are all among the most important topics in data mining research and development.",
-issn="0219-3116",
-doi="10.1007/s10115-007-0114-2",
-url="http://dx.doi.org/10.1007/s10115-007-0114-2"
+issn="0219-3116"
 }
 
 
@@ -201,15 +186,12 @@ year="2016",
 publisher="Springer International Publishing",
 address="Cham",
 pages="467--482",
-isbn="978-3-319-46298-1",
-doi="10.1007/978-3-319-46298-1_30",
-url="http://dx.doi.org/10.1007/978-3-319-46298-1_30"
+isbn="978-3-319-46298-1"
 }
 
 @misc{vw,
     author = {Langford, John and Li, Lihong and Strehl, Alex},
     citeulike-article-id = {9640840},
-    comment = {\url{http://hunch.net/\~{}vw}},
     keywords = {cj-bib},
     posted-at = {2011-08-11 01:40:23},
     priority = {2},
@@ -240,17 +222,9 @@ url="http://dx.doi.org/10.1007/978-3-319-46298-1_30"
   month = jun,
   location = {johnh: pafile},
   keywords = {hashing, content reuse, wikipedia, copying},
-  url = {http://www.isi.edu/%7ejohnh/PAPERS/Ardi14a.html},
-  pdfurl = {http://www.isi.edu/%7ejohnh/PAPERS/Ardi14a.pdf},
-  otherurl = {ftp://ftp.isi.edu/isi-pubs/tr-692.pdf},
   myorganization = {USC/Information Sciences Institute},
   copyrightholder = {authors}
 }
-
-
-
-
-
 
 
 @article{roc,
@@ -261,16 +235,7 @@ volume = {143},
 number = {1},
 pages = {29-36},
 year = {1982},
-doi = {10.1148/radiology.143.1.7063747},
-    note ={PMID: 7063747},
-
-URL = {
-        http://dx.doi.org/10.1148/radiology.143.1.7063747
-
-},
-eprint = {
-        http://dx.doi.org/10.1148/radiology.143.1.7063747
-}
+    note ={PMID: 7063747}
 }
 
 @article{soceng,
@@ -282,8 +247,6 @@ pages = "183 - 196",
 year = "2010",
 note = "",
 issn = "0160-791X",
-doi = "http://doi.org/10.1016/j.techsoc.2010.07.001",
-url = "http://www.sciencedirect.com/science/article/pii/S0160791X10000497",
 author = "Sherly Abraham and InduShobha Chengalur-Smith"
 }
 
@@ -338,7 +301,6 @@ url = "http://webdatacommons.org/hyperlinkgraph/index.html"
  month = {Feb},
  number = {1},
  volume = {36},
- url = {http://www.gnu.org/s/parallel},
  year = {2011},
  pages = {42-47}
 }
