--- a/docs/apzvalga/webtrees.tex
+++ b/docs/apzvalga/webtrees.tex
@@ -76,7 +76,7 @@ specifi \check skumas = {TN \over {TN + FP}} \cdot 100
 kur \textit{TN} yra tikrų neigiamų, \textit{TP} tikrų teigiamų, \textit{FP} klaidingai teigiamų, \textit{FN} klaidingai
 neigiamų klasifikavimų skaičius.
 
-\begin{ktutable}{webtrees_rezultatas}{Straipsnyje apžvelgiamų klasifikatorių kokybė}
+\begin{ktutable}{webtrees_rezultatas2}{Straipsnyje apžvelgiamų klasifikatorių kokybė}
     \begin{tabular}{| l | c | c | c | c | }
      \hline
      \diagbox{Kategorija}{Metrika} & Tikslumas & Jautrumas & Specifiškumas & AUC \\ \hline
@@ -85,4 +85,4 @@ neigiamų klasifikavimų skaičius.
     \end{tabular}
 \end{ktutable}
 
-Matavimų rezultatai pateikiami lentelėje \vref{tab:webtrees_rezultatas}. Rezultatai yra itin geri. Tai gali būti dėl duomenų rinkinio formavimo specifikos. Mokymo duomenų rinkiniui naudojamos svetainės iš egzistuojančių juodųjų sąrašų. Modelis sugeba išmokti tik jau aptiktų svetainių savybių, naudojant jį po tam tikro laiko tarpo, kai kenksmingos svetainės yra atnaujintos atsižvelgiant į egzistuojančius juoduosius sąrašus modelio rezultatai turėtų prastėti. Taip pat naudojamas duomenų rinkinys yra nedidelis, tai leidžia medžiui gerai prisitaikyti prie jame esančių duomenų.
+Matavimų rezultatai pateikiami lentelėje \vref{tab:webtrees_rezultatas2}. Rezultatai yra itin geri. Tai gali būti dėl duomenų rinkinio formavimo specifikos. Mokymo duomenų rinkiniui naudojamos svetainės iš egzistuojančių juodųjų sąrašų. Modelis sugeba išmokti tik jau aptiktų svetainių savybių, naudojant jį po tam tikro laiko tarpo, kai kenksmingos svetainės yra atnaujintos atsižvelgiant į egzistuojančius juoduosius sąrašus modelio rezultatai turėtų prastėti. Taip pat naudojamas duomenų rinkinys yra nedidelis, tai leidžia medžiui gerai prisitaikyti prie jame esančių duomenų.
