--- a/docs/taikymas/taikymas.tex
+++ b/docs/taikymas/taikymas.tex
@@ -31,7 +31,7 @@ Kenksmingų interneto tinklalapių identifikavimo programa susideda iš dviejų 
 Sąsaja yra komponentas kurio funkcija yra pateikti branduolio suteikiamą funkcionalumą naudotojams. Šiuo atveju
 tai yra http protokolu veikianti sąsaja. Šis komponentas atsakingas už užklausos perdavimą branduolio komponentui,
 branduolio komponente esančio klasifikatoriaus rezultato pateikimui naudotojui tinkamu formatu. Programinio
-įrankio išeities kodas pateikiamas prieduose \vref{priedas:frontend}.
+įrankio išeities kodas pateikiamas prieduose (2 priedas).
 
 Branduolio komponente vykdomas modelio pritaikymas. Jį sudaro klasė \texttt{ClassifierController} bei duomenų
 saugyklos kenksmingų ir nekenksmingų svetainių PageRank įverčiams.
